[package]
name = "axumlearn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = {version="0.6", features=["default", "headers", "ws"]}
tokio = {version="1", features=["full"]}
hyper = "0.14"
tower = "0.4"
tower-http = {version="0.4.0", features=["map-request-body", "util"]}
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["env-filter"]}
serde = {version="1", features=["derive"]}
serde_json = "1"
jsonwebtoken = "8"
rust-embed = "6"
mime_guess = "2"
dashmap = "5"
futures = "0.3" # split connection